@@ -2,6 +2,8 @@ Revision history for C and Perl extension of nfdump.
 
 1.25 2016-07-xx
 	-c: some leaks in memheap removed
+	-c: added new API function lnf_mem_clean(lnf_mem_t *lnf_mem)
+	-c: added exmaple lnf_ex11_memclean.c
 
 1.24 2016-06-21
 	-perl: better thread testing (with more detailed results)
